--- a/BackEnd/pom.xml
+++ b/BackEnd/pom.xml
@@ -67,12 +67,15 @@
                 <dependency>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-security</artifactId>
-                    <version>2.7.0</version>
                 </dependency>
                 <dependency>
                     <groupId>io.jsonwebtoken</groupId>
                     <artifactId>jjwt</artifactId>
                     <version>0.9.1</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-lang3</artifactId>
                 </dependency>
         </dependencies>
 	<build>
