--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/backend?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://ufoidxsf3jmynfrb:LlTZMjeNlbLxndfgPFog@b6eep6oj550qvzk1czmi-mysql.services.clever-cloud.com:3306/b6eep6oj550qvzk1czmi
+spring.datasource.username=ufoidxsf3jmynfrb
+spring.datasource.password=LlTZMjeNlbLxndfgPFog
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #JWT
 jwt.secret = secret
