agregando archivos de config

--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://ufoidxsf3jmynfrb:LlTZMjeNlbLxndfgPFog@b6eep6oj550qvzk1czmi-mysql.services.clever-cloud.com:3306/b6eep6oj550qvzk1czmi
-spring.datasource.username=ufoidxsf3jmynfrb
-spring.datasource.password=LlTZMjeNlbLxndfgPFog
+spring.datasource.url=jdbc:mysql://undu8v7ldpjnlg0y:UaN1p89EuncAy0TOaOCz@b0gyzt4uimowojlyojvf-mysql.services.clever-cloud.com:3306/b0gyzt4uimowojlyojvf
+spring.datasource.username=undu8v7ldpjnlg0y
+spring.datasource.password=UaN1p89EuncAy0TOaOCz
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+ spring.datasource.hikari.maximum-pool-size=2
 #JWT
 jwt.secret = secret
 jwt.expiration = 30000
