--- a/FrontEnd/.vscode/launch.json
+++ b/FrontEnd/.vscode/launch.json
@@ -7,7 +7,7 @@
       "type": "chrome",
       "request": "launch",
       "preLaunchTask": "npm: start",
-      "url": "https://backproyectointegradorap.herokuapp.com/"
+      "url": "https://backportafolio-lansel.koyeb.app/"
     },
     {
       "name": "ng test",
